Updates to job application material

--- a/texDocs/DEIstatement.tex
+++ b/texDocs/DEIstatement.tex
@@ -52,7 +52,8 @@ By equipping myself with the necessary knowledge and skills, I aspire to make a 
 
 Among the most effective ways to build an environment centered on diversity, equity, and inclusion is by developing a community where open discourse and collaboration are welcome.
 In my current department, I actively contribute to this goal through my participation in the graduate student council.
-Although my specific role on the council is the computing chair, the entire council meets regularly to discuss the overall culture of the department, aiming to make the statistics department a place where students feel welcomed and can thrive. I enjoy participating in these conversations and look forward to finding other ways to encourage open discourse on these important topics.
+Although my specific role on the council is the computing chair, the entire council meets regularly to discuss the overall culture of the department, aiming to make the statistics department a place where students feel welcomed and can thrive.
+I enjoy participating in these conversations and would like to continue to participate in (or develop) counsels that focus on the well-being of students and faculty.
 
 % Fostering inclusivity begins with understanding each student on a personal level and being flexible in my teaching approach.
 % By recognizing the diverse strengths and backgrounds of my students and adapting my teaching methods accordingly, I can effectively deliver course material to benefit the greatest number of students.
@@ -82,6 +83,12 @@ Working in an area with potential applications to public health, I understand th
 I believe that our efforts in this field have the potential to contribute to more equitable health solutions and policies, creating a positive impact that extends beyond academia and benefits diverse communities around the world.
 To achieve this, I am committed to engage in open discussions with stakeholders to understand how scientific recommendations based on research findings may affect their communities.
 
+I perceive that academia is currently facing two significant challenges: a reproducibility crisis in scientific research and a growing public mistrust in the value of scientific research.
+To address these issues, I am interested in participating in or developing community outreach programs that promote transparency and reproducibility in statistics and science, both within and outside of academia.
+Ideally, these programs will help tackle the issues within academia that contribute to public mistrust and alleviate fears stemming from misinformation.
+Although reversing the trend of mistrust in higher education is an ambitious goal, I am committed to being a researcher, instructor, and mentor who can effectively demonstrate the importance and benefits of research and higher education.
+
+% I perceive that academia as a whole is facing two obstacles. Specifically, scientific research is facing a reproducibility crises, and a large fraction of society has lost confidence in the usefulness and effectiveness of scientific research.
 
 % I am committed to using and building upon open-source tools to ensure that my research findings and methodologies are accessible to everyone, not just those with access to proprietary software.
 % By making my work open-source, I aim to democratize research and empower a broader community of scientists, public health officials, and policymakers to engage with and benefit from my findings.
