--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -64,3 +64,10 @@
     journal = {TBD},
     working = {Working Paper}
 }
+
+@article{panelpomp,
+  title = {panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R},
+  author = {Bret{\'o}, Carles and Wheeler, Jesse and King, Aaron A and Ionides, Edward L},
+  journal = {arXiv preprint arXiv:2410.07934},
+  year = {2024}
+}
