--- a/texDocs/otherWorks.bib
+++ b/texDocs/otherWorks.bib
@@ -96,6 +96,17 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   publisher={Elsevier}
 }
 
+@article{domeyer22,
+  title={Driver-pedestrian perceptual models demonstrate coupling: implications for vehicle automation},
+  author={Domeyer, Joshua E and Lee, John D and Toyoda, Heishiro and Mehler, Bruce and Reimer, Bryan},
+  journal={IEEE Transactions on Human-Machine Systems},
+  volume={52},
+  number={4},
+  pages={557--566},
+  year={2022},
+  publisher={IEEE}
+}
+
 @book{durbin12,
   title={Time series analysis by state space methods},
   author={Durbin, James and Koopman, Siem Jan},
@@ -127,6 +138,24 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   pages={18438--18443},
   year={2006},
   publisher={National Acad Sciences}
+}
+
+@article{ionides08,
+author = {Edward L Ionides},
+title = {Truncated Importance Sampling},
+journal = {Journal of Computational and Graphical Statistics},
+volume = {17},
+number = {2},
+pages = {295--311},
+year = {2008},
+publisher = {ASA Website},
+xdoi = {10.1198/106186008X320456},
+xURL = {
+        https://doi.org/10.1198/106186008X320456
+},
+xeprint = {
+        https://doi.org/10.1198/106186008X320456
+}
 }
 
 @article{ionides15,
@@ -177,6 +206,17 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   file = {/Users/jeswheel/Zotero/storage/YWCIVXZ5/Le Cam - 1990 - Maximum Likelihood An Introduction.pdf}
 }
 
+@article{lele07,
+  title={Data cloning: easy maximum likelihood estimation for complex ecological models using Bayesian Markov chain Monte Carlo methods},
+  author={Lele, Subhash R and Dennis, Brian and Lutscher, Frithjof},
+  journal={Ecology letters},
+  volume={10},
+  number={7},
+  pages={551--563},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
 @article{li24,
   title={Inference on spatiotemporal dynamics for coupled biological populations},
   author={Li, Jifan and Ionides, Edward L and King, Aaron A and Pascual, Mercedes and Ning, Ning},
@@ -217,6 +257,13 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   pages={4629--4640},
   year={2008},
   publisher={American Meteorological Society}
+}
+
+@article{spokoiny17,
+  title={Penalized maximum likelihood estimation and effective dimension},
+  author={Spokoiny, Vladimir},
+  year={2017},
+  journal={Annales de l'Institut Henri Poincar\'e - Probabilit\'es et Statistiques}
 }
 
 @article{sun24,
