--- a/texDocs/teachingStatement.tex
+++ b/texDocs/teachingStatement.tex
@@ -31,15 +31,21 @@
 
 % \noindent Dynamic systems are the subject of many ecological and financial studies.
 
-\noindent Throughout my academic career I have seen many differing approaches to teaching, from both the perspective of a student and from the perspective of an instructor.
+\noindent
+I am interested in teaching a wide variety of statistical courses and believe in the profound impact a dedicated instructor can have on a student's academic journey.
+As an undergraduate, I was inspired by a very skilled instructor who positively influenced my opinion on statistics, and I aim to pay this forward in my own teaching.
+My primary interests include courses that align closely with my teaching experience and research, such as time series analysis, statistical computing, data science, and applied statistics at both undergraduate and graduate levels.
+I am also eager to teach other statistics courses as needed, bringing the same level of enthusiasm and commitment to fostering a deep understanding of statistical principles among my students.
+
+Throughout my academic career I have seen many differing approaches to teaching, from both the perspective of a student and from the perspective of an instructor.
 These experiences have all shaped my teaching philosophy in differing ways, yet all have reaffirmed the importance of the teaching duty of an academic.
 Effective instructors have the potential to completely transform a student's life for the better, as several professors did for me when I was a student.
 As such, developing skills of an effective instructor is a responsibility I take very seriously.
 
-Recognizing that each student brings a unique background and experiences to the classroom, I strive to present material in various ways to accommodate different learning styles and cultural perspectives.
-Adaptability in teaching is crucial; what works well for one student may not resonate with another.
-Therefore, I employ multiple teaching strategies and actively seek feedback to ensure effective engagement with the material for all students.
-I have seen firsthand how adapting future lessons based on frequent assessments of student comprehension--—such as homework, quizzes, and tests--—can enhance learning outcomes.
+% Recognizing that each student brings a unique background and experiences to the classroom, I strive to present material in various ways to accommodate different learning styles and cultural perspectives.
+% Adaptability in teaching is crucial; what works well for one student may not resonate with another.
+% Therefore, I employ multiple teaching strategies and actively seek feedback to ensure effective engagement with the material for all students.
+% I have seen firsthand how adapting future lessons based on frequent assessments of student comprehension--—such as homework, quizzes, and tests--—can enhance learning outcomes.
 
 Effective teaching extends far beyond presenting raw material to students.
 As an educator, I believe that students learn most effectively when they can connect theoretical ideas to real-world problems.
@@ -74,9 +80,6 @@ They were required to explain their learning process and how they applied their 
 While AI tools can be beneficial, it is crucial for educators to evolve their teaching methods so that students can leverage new technology to enhance their learning experience rather than be hindered by it.
 % to prevent students from relying solely on AI-generated answers.
 
-I have a wide range of teaching interests supported by my interest in learning a wide variety of statistical topics.
-My primary interests include courses closely related to my teaching experience and research interests, including: time series analysis, statistical computing, data science, and applied statistics at both undergraduate and graduate levels.
-I am also happy to teach other statistics courses as needed.
 For a precise description of my teaching experiences, please refer to the teaching section of my CV: \href{https://jeswheel.github.io/texDocs/cv.pdf}{jeswheel.github.io/texDocs/cv.pdf}.
 % In conclusion, my teaching philosophy revolves around creating a dynamic and inclusive learning environment that caters to the diverse needs of students.
 % Through the integration of real-world examples, adaptive teaching methods, thoughtfully designed assignments, project-based learning, and the judicious use of generative AI, I aim to foster a deep and meaningful understanding of statistics among all my students.
